frontend/public/base.css
@tailwind base;

@tailwind components;

@tailwind utilities;

@layer base {
    html {
        scroll-behavior: smooth;
    }

    body {
        @apply text-gray-50;
        @apply font-normal;
        @apply bg-gray-800;
        @apply text-base;
    }

    select {
        background-image: linear-gradient(45deg, transparent 50%, theme('colors.gray.50') 50%),
            linear-gradient(135deg, theme('colors.gray.50') 50%, transparent 50%);
        background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px);
        background-size: 5px 5px, 5px 5px;
        background-repeat: no-repeat;
    }
}

@layer components {
    .btn-primary {
        @apply flex
            items-center
            justify-center
            rounded-full
            bg-green-500
            hover:cursor-pointer
            hover:bg-green-400;
    }

    .btn-secondary {
        @apply flex
            items-center
            justify-center
            rounded-full
            ring-inset
            ring-2
            ring-gray-50
            hover:cursor-pointer
            hover:text-green-500
            hover:ring-green-500;
    }
}

.pixelated {
    image-rendering: pixelated;
}

/* remove default blue highlight that tailwind sets*/
* {
    -webkit-tap-highlight-color: transparent;
}

